--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>top.cardone</groupId>
         <artifactId>cardone-parent</artifactId>
-        <version>cardone.yht.1-SNAPSHOT</version>
+        <version>Interior.SR1</version>
         <relativePath/>
     </parent>
 
