--- a/implements/default/pom.xml
+++ b/implements/default/pom.xml
@@ -12,9 +12,9 @@
 
     <groupId>top.cardone</groupId>
     <artifactId>cardone-authority-implements-default</artifactId>
-    <version>${project.parent.version}</version>
-    <name>${project.artifactId}</name>
-    <description>top.cardone cardone-authority-implements default</description>
+    <version>1.1.1-SNAPSHOT</version>
+    <name>top.cardone cardone-authority-implements-default</name>
+    <description>top.cardone cardone-authority-implements-default</description>
     <packaging>jar</packaging>
 
     <dependencies>
