--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -38,8 +38,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>top.cardone</groupId>
+            <artifactId>cardone-cache-implements-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.cardone</groupId>
+            <artifactId>cardone-cache-implements-redis</artifactId>
         </dependency>
 
         <dependency>
