--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,13 +6,13 @@
     <parent>
 		<groupId>top.cardone</groupId>
         <artifactId>cardone-authority-parent</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>MANGO-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
 
     <groupId>top.cardone</groupId>
     <artifactId>cardone-authority-api</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>MANGO-SNAPSHOT</version>
     <name>top.cardone cardone-authority-api</name>
     <description>top.cardone cardone-authority-api</description>
     <packaging>jar</packaging>
