--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -58,8 +58,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <groupId>top.cardone</groupId>
+            <artifactId>cardone-amqp</artifactId>
         </dependency>
 
         <dependency>
